plugins {
    id 'application'
}

application {
    mainClass ="com.donnnno.arcticons.helper.Start"
}

tasks.register('runyou', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['you']
    inputs.dir("../icons/white")
    outputs.dir("../app/src/you/res/drawable-anydpi")
}
tasks.register('runblack', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['black']
}
tasks.register('runnormal', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['normal']
}
tasks.register('rundayNight', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['dayNight']
    inputs.dir("../icons/white")
    outputs.dir("../app/src/dayNight/res/drawable-anydpi")
}




dependencies {
    // SDK and tools required for Android and other general tasks
    implementation("com.android.tools:sdk-common:31.13.2")

    // XML parsing (you are using dom4j here)
    implementation("org.dom4j:dom4j:2.2.0")

    // File handling utilities
    implementation("commons-io:commons-io:2.21.0")

    // For WebP image format handling (if you need it)
    implementation("io.github.darkxanter:webp-imageio:0.3.3")

    // Add Apache Batik for SVG processing
    implementation("org.apache.xmlgraphics:batik-transcoder:1.19")   // Batik's SVG transcoder
    implementation("org.apache.xmlgraphics:batik-dom:1.19")          // Batik's DOM utilities
    implementation("org.apache.xmlgraphics:batik-swing:1.19")        // Batik's swing utilities for rendering

    // Optional: If you want to work with BufferedImage in Java 2D
    implementation("org.apache.xmlgraphics:batik-svggen:1.19")  // To generate image from SVGs
    implementation("org.apache.xmlgraphics:batik-codec:1.19")

}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}